--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,17 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>卡西慕后台管理</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="/vendor//kindeditor/themes/simple/simple.css">
+  <script src="/vendor/kindeditor/kindeditor-all.js"></script>
+  <script src="/vendor/kindeditor/lang/zh-CN.js"></script>
 </head>
 
 <body>
   <div id="app">
     
   </div>
-  <script src="/vendor/kindeditor/kindeditor-all.js"></script>
-  <script src="/vendor/kindeditor/lang/zh-CN.js"></script>
+  
 </body>
+
 
 </html>
